Update and rename Discovering LLVM#01.html to 01#Discovering LLVM.html

--- a/01#Discovering LLVM.html
+++ b/01#Discovering LLVM.html
@@ -59,10 +59,6 @@ div.post, article.post, body {font-size: 16px;}
 
 You became giddy with excitement when I discovered LLVM. Generate code in LLVM IR format, and LLVM can optimize and generate native code for any of its supported backends. Here's an incomplete list<!--more-->:
 
-<div class="dir">
-<a href="http://aondir.blogspot.com/search?q=Recompiling+NES+Games&max-results=21">!Table of Contents More</a>
-</div>
-
 <div class="dir"><pre>
 ARM
 STI CBEA Cell SPU [experimental]
@@ -111,8 +107,8 @@ Compiling with gcc with default settings, we get:
 
 <div class="nul"><pre>
 $ gcc test.c
-test.c: In function ‘main’:
-test.c:7:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
+test.c: In function â€˜mainâ€™:
+test.c:7:5: error: â€˜forâ€™ loop initial declarations are only allowed in C99 mode
 test.c:7:5: note: use option -std=c99 or -std=gnu99 to compile your code
 $
 </pre></div>
