--- a/11#Handling Interrupts.html
+++ b/11#Handling Interrupts.html
@@ -57,10 +57,8 @@ div.post, article.post, body {font-size: 16px;}
 
 <body>
 
-In NES programming, after any instruction, it is possible that the program counter is yanked away from the next expected instruction and instead sent to a predefined location. This is called an interrupt.<!--more-->
-<div class="dir">
-<a href="http://aondir.blogspot.com/search?q=Recompiling+NES+Games&amp;max-results=21">!Table of Contents More</a>
-</div>
+In NES programming, after any instruction, it is possible that the program counter is yanked away from the next expected instruction and instead sent to a predefined location. This is called an interrupt.
+
 There are 3 kinds of interrupts in NES programming:
 <P>
 <b>Reset</b><br>
